# dynac

./: .gitattributes  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CTestConfig.cmake  LICENSE.md  README.md
converters/: CMakeLists.txt  dst2ascii.f  tw2dyn.f
datafiles/: CMakeLists.txt  egun_example2.in  egun_field.txt
datafiles/egun/: CMakeLists.txt  dynac.print.ref
datafiles/electrostatic/: CMakeLists.txt
datafiles/electrostatic/dipole/: CMakeLists.txt  dynac.print.ref  esd_in_ed.dst  esd_rb.in
datafiles/electrostatic/quad/: CMakeLists.txt  dynac.print.ref  dynac_eq_rb.in  dynac_eq_rb_quafk.in  track_dp_out_no_sc.dst
datafiles/ess/: CMakeLists.txt
datafiles/ess/01_RFQ/: CMakeLists.txt
datafiles/ess/01_RFQ/0mA/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  ess_rfq_ge_r13.in
datafiles/ess/01_RFQ/70mA/: CMakeLists.txt  ESS_ff_prf.txt  ESS_rms_prf.txt  dynac.print.cfg  dynac.print.ref  ess_rfq_r13_prf.txt  ess_rfq_rd_70mA_r13.in
datafiles/ess/02_MEBT/0mA/: CMakeLists.txt  dynac.print.ref  ess_mebt.in
datafiles/ess/02_MEBT/62.5mA/: .ess_mebt_sc.in.swp  CMakeLists.txt  dynac.print.cfg  dynac.print.ref  ess_mebt_sc.in
datafiles/ess/03_DTL/: CMakeLists.txt
datafiles/ess/03_DTL/0mA/: CMakeLists.txt  dynac.print.ref  dynac_rb_sp.in
datafiles/ess/03_DTL/62.5mA/: CMakeLists.txt
datafiles/ess/03_DTL/62.5mA/hersc/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  dynac_rb_sp_hersc.in
datafiles/ess/03_DTL/62.5mA/scheff/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  dynac_rb_sp_scheff.in
datafiles/ess/03_DTL/62.5mA/scherm/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  dynac_rb_sp_scherm.in
datafiles/ess/04_SPK/: CMakeLists.txt
datafiles/ess/04_SPK/0mA/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  spoke_0mA.in
datafiles/ess/04_SPK/62p5mA/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  spoke_62p5mA.in
datafiles/ess/04_SPK/cavmc/: CMakeLists.txt
datafiles/ess/04_SPK/cavmc/ge/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  spoke_62p5mA_ge_cavmc.in
datafiles/ess/04_SPK/cavmc/rb/: CMakeLists.txt  dynac.print.ref  spoke_62p5mA_rb_cavmc.in
datafiles/ess/05_SCL/: CMakeLists.txt
datafiles/ess/05_SCL/0mA/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  scl_0mA.in
datafiles/ess/05_SCL/62p5mA/: CMakeLists.txt  Spoke_F2F_field.txt  dynac.print.cfg  dynac.print.ref  scl_62p5mA.in
datafiles/ess/05_SCL/ANA/: CMakeLists.txt  MBL_F2F_field.txt  dynac.print.cfg  dynac.print.ref  scl_62p5mA_sp.in  setphase.in
datafiles/sns/: CMakeLists.txt  dynac.print.cfg  dynac.print.ref  mebt_dtl1.in
doc/: CMakeLists.txt  Doxyfile.in
plot/: CMakeLists.txt  dyndat.f
source/: CMakeLists.txt  com  dynac.F  dynacv6_0.f
